[package]
name = "arber"
authors = ["Andreas Doerr"]
version = "0.0.2"
edition = "2018"

description = "A Merkle-Mountain-Range (MMR) library"
repository = "http://github.com/adoerr/arber"
readme = "README.md"
keywords = ["mmr", "merkle-trees", "crypto", "accumulator"]
categories = ["data-structures"]
license = "Apache-2.0"

[dependencies]
codec = { version = "2.2.0", package = "parity-scale-codec", default-features = false, features = ["derive"] }

blake2 = "0.9"

[dev-dependencies]
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "arber_benchmark"
harness = false

[features]
default = ["std"]
std = [
	"codec/std",
]